--- a/app/views/admin/articles/index.html.haml
+++ b/app/views/admin/articles/index.html.haml
@@ -1,5 +1,7 @@
 %nav.navbar.navbar-light
   .container-fluid
+    %ol.breadcrumb
+      %li.breadcrumb-item.active Назва
     .ms-auto
       = link_to t('infold.operation.new'), new_admin_article_path, class: 'btn btn-warning', data: { turbo_frame: "modal_main" }
 #index_page.d-md-flex{ data: { controller: 'index-page', index_page_target: 'wrapper' } }
@@ -7,26 +9,31 @@
     = form_with model: @search, url: admin_articles_path, method: :get, scope: 'search',
       data: { index_page_target: 'searchForm' } do |form|
       = form.hidden_field :sort_field, data: { index_page_target: 'sortField' }
+      = form.hidden_field :sort_kind, data: { index_page_target: 'sortKind' }
       .mb-3
-        = render Admin::FieldsetComponent.new(form, :name_full_like, :text, alignment: false, 
-          label: Admin::Customer.human_attribute_name(:name), placeholder: 'like %...%')
+        = render Admin::FieldsetComponent.new(form, :service_id_eq, :association_search, alignment: false, 
+          label: Admin::Article.human_attribute_name(:service_id), association_name: :service, search_path: admin_services_path(name_field: :title), name_field: :service_title)
+      .mb-3
+        = render Admin::FieldsetComponent.new(form, :published_eq, :switch, alignment: false, 
+          label: "Неопублінокано", include_hidden: false)
       %hr.my-3
       .row.gx-2
         .col-6.order-2.d-grid
           = form.submit t('infold.operation.search'), class: 'btn btn-primary'
         .col-6.d-grid
-          = link_to t('infold.operation.clear'), admin_customers_path, class: 'btn btn-secondary'
+          = link_to t('infold.operation.clear'), admin_articles_path, class: 'btn btn-secondary'
   #result.flex-fill.container-fluid.ps-3.py-3{ data: { index_page_target: 'resultArea' } }
     - if @articles.blank?
       .alert#no_data= t('infold.no_data')
     .card.border-top-0
       .table_wrapper.table-responsive.bg-secondary-lt{ data: { index_page_target: 'resultTableWrapper' } }
-        %table.table.table-sm.table-hover.table-striped.mb-0.bg-white
+        %table.table-sm.table.table-hover.table-striped.mb-0.bg-white
           %thead{ data: { index_page_target: 'thead' } }
             %tr
               %th.icon_cell
-              %th= render Admin::SortableComponent.new(@search, :title, label: Admin::Article.human_attribute_name(:title))
+              %th.icon_cell
               %th= render Admin::SortableComponent.new(@search, :service_id, label: Admin::Article.human_attribute_name(:service_id))
+              %th= render Admin::SortableComponent.new(@search, :title, label: Admin::Article.human_attribute_name(:title))
               %th.icon_cell
           %tbody#articles
             = render partial: "index_row", collection: @articles, as: 'article'
