--- a/app/views/admin/common/_header_menu.html.haml
+++ b/app/views/admin/common/_header_menu.html.haml
@@ -5,3 +5,5 @@
     = link_to 'Повідомлення', admin_landing_messages_path, class: 'nav-link fs-3'
   %li.nav-item
     = link_to 'Замовлення', admin_orders_path, class: 'nav-link fs-3'
+  %li.nav-item
+    = link_to 'Послуги', admin_services_path, class: 'nav-link'
