--- a/app/views/admin/services/_form.html.haml
+++ b/app/views/admin/services/_form.html.haml
@@ -2,6 +2,6 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :title, :text)
   .list-group-item
-    = render Admin::FieldsetComponent.new(form, :photo, :file)
+    = render Admin::FieldsetComponent.new(form, :image, :file)
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :description, :text_area)
