--- a/app/views/admin/services/index.html.haml
+++ b/app/views/admin/services/index.html.haml
@@ -24,14 +24,14 @@
       .alert#no_data= t('infold.no_data')
     .card.border-top-0
       .table_wrapper.table-responsive.bg-secondary-lt{ data: { index_page_target: 'resultTableWrapper' } }
-        %table.table.table-sm.table-hover.table-striped.mb-0.bg-white
+        %table.table.table-hover.table-striped.mb-0.bg-white
           %thead{ data: { index_page_target: 'thead' } }
             %tr
               %th.icon_cell
               %th= render Admin::SortableComponent.new(@search, :id, label: Admin::Service.human_attribute_name(:id))
               %th= render Admin::SortableComponent.new(@search, :title, label: Admin::Service.human_attribute_name(:title))
               %th= render Admin::SortableComponent.new(@search, :description, label: Admin::Service.human_attribute_name(:description))
-              %th= render Admin::SortableComponent.new(@search, :photo, label: Admin::Service.human_attribute_name(:photo))
+              %th= render Admin::SortableComponent.new(@search, :image, label: Admin::Service.human_attribute_name(:image))
               %th.icon_cell
           %tbody#services
             = render partial: "index_row", collection: @services, as: 'service'
