--- a/app/views/admin/services/_index_row.html.haml
+++ b/app/views/admin/services/_index_row.html.haml
@@ -4,9 +4,9 @@
       %i.bi.bi-file-text.h3
   %td
     = service.id
-  %td
+  %td.text-wrap
     = service.title
-  %td
+  %td.text-wrap
     = service.description
   %td.image_cell
     - if service.image.attached?
