--- a/app/views/admin/articles/_form.html.haml
+++ b/app/views/admin/articles/_form.html.haml
@@ -10,4 +10,4 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :description, :text_area)
   .list-group-item
-    = render Admin::FieldsetComponent.new(form, :body, :text_area)
+    = render Admin::FieldsetComponent.new(form, :body, :rich_text_area)
