--- a/app/views/admin/orders/_form.html.haml
+++ b/app/views/admin/orders/_form.html.haml
@@ -27,6 +27,10 @@
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :price, :number, required: true)
   .list-group-item
+    = render Admin::FieldsetComponent.new(form, :dead_date, :date, datepicker: true)
+  .list-group-item
+    = render Admin::FieldsetComponent.new(form, :dead_time, :time)
+  .list-group-item
     = render Admin::FieldsetComponent.new(form, :status, :radio, required: true, list: Admin::Order.statuses_i18n.invert)
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :paid, :radio, required: true, list: Admin::Order.paids_i18n.invert)
