--- a/app/views/admin/orders/_show_content.html.haml
+++ b/app/views/admin/orders/_show_content.html.haml
@@ -35,8 +35,20 @@
         .text-muted.fw-bold= order.class.human_attribute_name(:price)
       .col-md-9
         = order.price
+  .list-group-item
+    .row
+      .col-md-3
+        .text-muted.fw-bold= order.class.human_attribute_name(:dead_date)
+      .col-md-9
+        = order.dead_date
+  .list-group-item
+    .row
+      .col-md-3
+        .text-muted.fw-bold= order.class.human_attribute_name(:dead_time)
+      .col-md-9
+        = order.dead_time
 .card.mb-3
-  .card-header.py-2
+  .card-header
     %h4.text-muted.mb-0= Admin::OrderDetail.model_name.human
   - if order.order_details.blank?
     .card-body
@@ -46,7 +58,7 @@
       %table.table.table-hover.card-table
         %thead
           %tr
-            %th= Admin::Service.model_name.human+':'
+            %th= Admin::OrderDetail.human_attribute_name(:service_id)
         %tbody
           - order.order_details.each do |order_detail|
             %tr
