--- a/app/views/admin/services/_form.html.haml
+++ b/app/views/admin/services/_form.html.haml
@@ -5,3 +5,5 @@
     = render Admin::FieldsetComponent.new(form, :image, :file)
   .list-group-item
     = render Admin::FieldsetComponent.new(form, :description, :text_area)
+  .list-group-item
+    = render Admin::FieldsetComponent.new(form, :body, :rich_text_area)
