--- a/app/views/admin/services/_show_content.html.haml
+++ b/app/views/admin/services/_show_content.html.haml
@@ -8,12 +8,6 @@
   .list-group-item
     .row
       .col-md-3
-        .text-muted.fw-bold= service.class.human_attribute_name(:description)
-      .col-md-9
-        = service.description
-  .list-group-item
-    .row
-      .col-md-3
         .text-muted.fw-bold= service.class.human_attribute_name(:image)
       .col-md-9
         - if service.image.attached?
@@ -23,3 +17,15 @@
             - else
               = service.image.filename
 
+  .list-group-item
+    .row
+      .col-md-3
+        .text-muted.fw-bold= service.class.human_attribute_name(:description)
+      .col-md-9
+        = service.description
+  .list-group-item
+    .row
+      .col-md-3
+        .text-muted.fw-bold= service.class.human_attribute_name(:body)
+      .col-md-9
+        = service.body
