--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,10 +1,35 @@
-%div{class: "container mx-auto my-4 font-messiri"}
-  .flex.flex-wrap.justify-center
-    .w-full.px-4.mb-8{:class => "md:w-8/12"}
-      = image_tag(@article.image, class: "w-full h-64 object-cover rounded", alt: @article.title)
-      %h1.text-4xl.font-bold.mt-4.mb-2
-        = @article.title
-      %p.text-stone-700.mb-4.text-2xl
-        = @article.description
-      %p.text-stone-700.mb-4.text-2xl
-        = @article.body
+%section.max-w-screen-2xl.mx-auto.p-5.sm:p-10.md:p-16.relative.font-messiri
+  .bg-cover.bg-center.text-center.overflow-hidden{:style => "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title}
+  .max-w-5xl.mx-auto.mb-32
+    .mt-3.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.flex.flex-col.justify-between.leading-normal
+      .bg-white.relative.top-0.-mt-32.p-5.sm:p-10
+        %h1.text-gray-900.font-bold.text-3xl.mb-2
+          = @article.title
+        -#%p.text-gray-700.text-xs.mt-2
+        -#  Written By:
+        -#  %a.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#    Ahmad Sultani
+        -#  In
+        -#  %a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#    Election
+        -#  %a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#    Politics
+        %blockquote.text-base.leading-8.my-5.text-stone-700.mb-4.text-2xl.border-s-4.border-stone-300.p-4.shadow-md
+          = @article.description
+        -#%h3.text-2xl.font-bold.my-5 #1. What is Lorem Ipsum?
+        %p.text-base.leading-8.my-5
+          = @article.body
+        
+        -#%a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#  \#Election
+        -#%a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#  \#people
+        -#%a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#  \#Election2020
+        -#%a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#  \#trump
+        -#%a.text-xs.text-indigo-600.font-medium.hover:text-gray-900.transition.duration-500.ease-in-out{:href => "#"}
+        -#  \#Joe
+        
+        %p{class: ""}
+          = link_to "До наших послуг", services_path, class: "text-xl hover:border-b-2 hover:border-red-500 text-stone-500 hover:text-stone-900"
