--- a/app/views/landing/_1_hero_section.html.haml
+++ b/app/views/landing/_1_hero_section.html.haml
@@ -1,10 +1,13 @@
 %div{class: "py-3 sm:py-6 mt-2 sm:mt-4 md:mt-6 lg:mt-8 xl:mt-10"}
   %div{class: "mx-auto container px-6 lg:px-8"}
-    %div{class: "mx-auto max-w-2xl text-center font-messiri"}
+    %div{class: "mx-auto max-w-5xl text-center font-messiri"}
       %h1{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-600"}
         Даруємо старим речам нове життя
-      %p{class: "mt-6 leading-8 text-gray-600 text-xl"}
+      %p{class: "mt-6 leading-8 text-gray-600 text-2xl"}
         Надаємо якісні послуги з ремонту верхнього та легкого одягу.
+        %br
+        Звертайтесь до нас, і ми з радістю втілимо ваші мрії в реальність!
+        %br
         Якість послуг та ціни змушують наших клієнтів приходити до нас знову та знову.
     %div{class: "mt-3 flow-root"}
       %div{class: "w-full transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0 rounded-xl p-2 ring-1 ring-inset lg:-m-4 lg:rounded-2xl lg:p-4 bg-gray-900/5 ring-gray-900/10"}
