--- a/app/views/landing/_7_contacts.html.haml
+++ b/app/views/landing/_7_contacts.html.haml
@@ -1,5 +1,5 @@
 -#%div{class: ""}
-%section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 py-8"}
+%section{class: "bg-white container font-messiri mx-auto px-4 space-y-6 bg-stone-100 my-8 p-6"}
   %div{class: "mx-auto text-center"}
     %h2{class: "text-4xl font-extrabold text-gray-900"}
       Завітайте до нас. Ми завжди вам раді:
@@ -16,7 +16,7 @@
             %h3{class: "text-lg font-medium text-gray-900"} Наша адреса:
             %p{class: "mt-1 text-gray-600 text-2xl"}
               50055, вул. Кокчетавська 3, м. Кривий Ріг
-          %div{class: "border-t border-gray-200 px-6 py-4"}
+          %div{class: "border-t-4 border-gray-200 mx-6 py-4"}
             %h3{class: "text-lg font-medium text-gray-900"}
               Часи роботи:
             %p{class: "mt-1 text-gray-600 text-2xl"}
@@ -25,7 +25,23 @@
               Субота: 10:00 - 16:00
             %p{class: "mt-1 text-gray-600 text-2xl"}
               Неділя - Понеділок: Зачинено
-          .border-t.border-gray-200.px-6.py-4
+            
+            %div{id: "warning", class: "flex items-center w-full p-4 text-gray-500 bg-red-100 rounded-lg shadow", role: "alert"}
+              %div{class: "inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg"}
+                %i{class: "fa-solid fa-triangle-exclamation"}
+              %div{class: "ms-auto text-md font-normal text-center"}
+                У зв'язку з відключенням електроенергії, графік роботи може бути змінений. У разі виникнення питань телефонуйте:
+                %span{class: "px-[5px] text-gray-900 whitespace-nowrap"}
+                  %i{class: "fa-solid fa-phone"}
+                  %a{href: "tel:+380972870571"}+38 097 287 05 71
+                %br
+                Просимо вибачення за незручності.
+              %button{class: "ms-auto bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 -mx-1.5 -my-1.5 p-1.5", "aria-label": "Close", "data-dismiss-target": "#warning", type: "button"}
+                %span.sr-only Close
+                %i{class: "fa-solid fa-xmark"}
+
+
+          .border-t-4.border-gray-200.mx-6.py-4
             %h3{class: "text-lg font-medium text-gray-900"}
               Контакти:
             %p{class: "mt-1 text-gray-600 text-2xl"}
