--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -1,36 +1,23 @@
 -#= video_tag("test.mp4", size: "640", autoplay: :autoplay, loop: :loop, controls: true, html: {class: "border-4"})
 -#%button{onclick: "setGtag()", class: "hidden"} Yes
 
-%div{id: "warning", class: "flex items-center w-full p-4 text-gray-500 bg-red-100 rounded-lg shadow", role: "alert"}
-  %div{class: "inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-orange-500 bg-orange-100 rounded-lg"}
-    %i{class: "fa-solid fa-triangle-exclamation"}
-  %div{class: "ms-auto text-md font-normal text-center"}
-    У зв'язку з відключенням електроенергії, графік роботи може бути змінений. У разі виникнення питань телефонуйте:
-    %span{class: "px-[5px] text-gray-900 whitespace-nowrap"}
-      %i{class: "fa-solid fa-phone"}
-      %a{href: "tel:+380972870571"}+38 097 287 05 71
-    %br
-    Просимо вибачення за незручності.
-  %button{class: "ms-auto bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 hover:bg-gray-100 inline-flex items-center justify-center h-8 w-8 -mx-1.5 -my-1.5 p-1.5", "aria-label": "Close", "data-dismiss-target": "#warning", type: "button"}
-    %span.sr-only Close
-    %i{class: "fa-solid fa-xmark"}
-
 %div{class: "", id: ""}
   
-  %div{class: "wow bounceInLeft", id: "hero-section"}
+  %div{class: "wow animate__animated animate__fadeInLeft", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "hero-section"}
     = render "1_hero_section"
   
-  %div{class: "mt-8 wow bounceInRight", id: "services"}
+  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "services"}
     = render "2_services"
-  
-  %div{class: "mt-2 wow bounceInLeft", id: "services"}
     = render "3_services"
+  
+  %div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "prices"}
+    = render "4_prices"
 
-  %div{class: "mt-16 wow bounceInRight", id: "about"}
-    = render "4_about"
+  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "about"}
+    = render "5_about"
 
-  %div{class: "mt-16 wow bounceInLeft", id: "reviews"}
-    = render "5_reviews"
+  -#%div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "reviews"}
+  -#  = render "6_reviews"
 
-  %div{class: "mt-16 wow bounceInRight", id: "contacts"}
-    = render "6_contacts"
+  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "contacts"}
+    = render "7_contacts"
