--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,39 +1,20 @@
-- @services.each do |service|
-  - if service.id.odd?
-    %a{class: "", href: service_path(service)}
-      %div{class: "font-messiri bg-stone-50 my-4 container mx-auto rounded-xl shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300 overflow-hidden max-w-6xl"}
-        %div{class: "sm:flex"}
-          %div{class: "hidden sm:block"}
-            - if service.image.attached?
-              = image_tag(service.image, class: "h-48 w-full object-cover sm:h-full sm:w-48 transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-            - else
-              = image_tag("favicon.png", class: "h-48 w-full object-cover sm:h-full sm:w-48", alt: service.title)
-          %div{class: "p-8"}
-            %p{class: "block mt-1 text-lg leading-tight font-medium text-black"}
-              Incredible
-              accommodation for your team
-            %p{class: "mt-2 text-slate-500"}
-              Looking to take your team away on a retreat to enjoy awesome food and take in
-              some sunshine? We have a list of places to do just that.
-            %div{class: "text-red-600 w-full flex justify-end items-end"}
-              %div{class: "pe-1 sm:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
-                Докладніше
-  - else
-    %a{class: "", href: service_path(service)}
-      %div{class: "font-messiri bg-stone-50 my-4 container mx-auto rounded-xl shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300 overflow-hidden max-w-6xl"}
-        %div{class: "sm:flex"}
-          %div{class: "p-8"}
-            %p{class: "block mt-1 text-lg leading-tight font-medium text-black"}
-              Incredible
-              accommodation for your team
-            %p{class: "mt-2 text-slate-500"}
-              Looking to take your team away on a retreat to enjoy awesome food and take in
-              some sunshine? We have a list of places to do just that.
-            %div{class: "text-red-600 w-full flex justify-start items-start"}
-              %div{class: "pe-1 sm:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-start"}
-                Докладніше
-          %div{class: "hidden sm:block"}
-            - if service.image.attached?
-              = image_tag(service.image, class: "h-48 w-full object-cover sm:h-full sm:w-48 transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-            - else
-              = image_tag("favicon.png", class: "h-48 w-full object-cover sm:h-full sm:w-48", alt: service.title)
+%h1{class: "mt-4 font-messiri text-center text-2xl tracking-tight sm:text-3xl font-medium uppercase text-red-600"}
+  Раді вам запропонувати наші послуги
+.mx-auto.p-5.sm:p-10.md:p-16
+  .grid.grid-cols-1.md:grid-cols-3.sm:grid-cols-2.xl:grid-cols-4.gap-10
+    - @services.each do |service|
+      %a{class: "shadow-md hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
+        .border-r.border-b.border-l.border-gray-400.lg:border-t.lg:border-gray-400.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.flex.flex-col.justify-between.leading-normal
+          - if service.image.attached?
+            = image_tag(service.image, class: "w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+          - else
+            = image_tag("favicon.png", class: "w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+          %div{class: "p-4 pt-2 h-auto md:h-64 lg:h-64 xl:h-56"}
+            .mb-8
+              %p.text-gray-900.font-bold.text-lg.mb-2.hover:text-indigo-600.inline-block
+                = service.title
+              %p.text-gray-700.text-sm.text-ellipsis
+                = service.description
+          %div{class: "pe-2 pb-2 text-red-600 w-full flex justify-end items-end"}
+            %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
+              Докладніше
