--- a/app/views/shared/_contact_form.html.haml
+++ b/app/views/shared/_contact_form.html.haml
@@ -1,5 +1,5 @@
 -# Modal
-%div{id: "contactFormModal", class: "fixed z-10 inset-0 overflow-y-auto hidden", "data-turbo": "false"}
+%div{id: "contactFormModal", class: "font-messiri fixed z-10 inset-0 overflow-y-auto hidden", "data-turbo": "false"}
   %div{class: "flex items-center justify-center min-h-screen"}
     %div{class: "bg-white p-6 rounded-2xl shadow-md w-1/2"}
       %div{class: "flex justify-end"}
@@ -9,7 +9,6 @@
             %path{d: "M6 18L18 6M6 6l12 12", "stroke-linecap": "round", "stroke-linejoin": "round", "stroke-width": "2"}
       %h2{class: "text-2xl font-bold mb-4 text-center"} Відправити повідомлення
       = form_for [@landing_message, LandingMessage.new], remote: false do |f|
-        = hidden_field_tag :format, :html
         %div{class: "mb-4"}
           %label{class: "block text-gray-700 text-sm font-bold mb-2", for: "name"} Імʼя
           = f.text_field :name, required: true, class: "w-full p-2 border rounded-md focus:outline-none focus:border-blue-500", id: "name"
