--- a/app/views/landing/_1_hero_section.html.haml
+++ b/app/views/landing/_1_hero_section.html.haml
@@ -1,9 +1,9 @@
 %div{class: "py-3 sm:py-6 mt-2 sm:mt-4 md:mt-6 lg:mt-8 xl:mt-10"}
   %div{class: "mx-auto container px-6 lg:px-8"}
     %div{class: "mx-auto max-w-5xl text-center font-messiri"}
-      %h1{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-600"}
+      %h1{class: "text-2xl font-bold tracking-tight sm:text-3xl font-medium uppercase text-red-500"}
         Даруємо старим речам нове життя
-      %p{class: "mt-6 leading-8 text-gray-600 text-2xl"}
+      %p{class: "mt-6 leading-8 text-stone-600 text-light text-2xl"}
         Надаємо якісні послуги з ремонту верхнього та легкого одягу.
         %br
         Звертайтесь до нас, і ми з радістю втілимо ваші мрії в реальність!
