--- a/app/views/landing/_8_contacts.html.haml
+++ b/app/views/landing/_8_contacts.html.haml
@@ -1,5 +1,5 @@
 -#%div{class: ""}
-%section{class: "bg-white container font-messiri mx-auto px-4 space-y-6 bg-stone-100 my-8 p-6"}
+%section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 my-8 p-6"}
   %div{class: "mx-auto text-center"}
     %h2{class: "text-4xl font-extrabold text-gray-900"}
       Завітайте до нас. Ми завжди вам раді:
