--- a/app/views/landing/_2_services.html.haml
+++ b/app/views/landing/_2_services.html.haml
@@ -1,7 +1,7 @@
 %section{class: "font-messiri bg-white relative items-center w-full px-5 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl"}
   %div{class: "py-3 sm:py-6"}
-    %h1{class: "text-3xl py-2 font-messiri text-center font-bold tracking-tight font-medium text-red-600"}
-      Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
+    %h1{class: "text-3xl uppercase font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
+      Наші послуги
   %div{class: "grid w-full grid-cols-1 gap-6 mx-auto md:grid-cols-3"}
     %a{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300", href: services_path}
       %div{class: "hidden md:block"}
@@ -11,7 +11,7 @@
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  Якщо у вас вийшов з ладу замок, це не означає, що речі вийшла з ладу та її потрібно викинути.
       -#  Ми проведемо швидку його заміну, і ваш виріб прослужить ще не один день.
-      %div{class: "text-red-600 w-full flex justify-end items-end"}
+      %div{class: "text-red-500 w-full flex justify-end items-end"}
         %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           Докладніше
     %a{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300", href: services_path}
@@ -21,7 +21,7 @@
         Штопка (штуковка джинсових виробів)
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  штуковка
-      %div{class: "text-red-600 w-full flex justify-end items-end"}
+      %div{class: "text-red-500 w-full flex justify-end items-end"}
         %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           Докладніше
     %a{class: "flex flex-col p-6 shadow-md cursor-pointer hover:shadow-lg hover:shadow-red-300", href: services_path}
@@ -31,7 +31,7 @@
         Ремонт шкіряних та хутрових виробів
       -#%p.mx-auto.text-base.leading-relaxed.text-gray-500
       -#  Ремонт шкіряних та хутрових виробів
-      %div{class: "text-red-600 w-full flex justify-end items-end"}
+      %div{class: "text-red-500 w-full flex justify-end items-end"}
         %div{class: "pe-1 md:pe-2 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
           Докладніше
 
