--- a/app/views/landing/_4_prices.html.haml
+++ b/app/views/landing/_4_prices.html.haml
@@ -1,12 +1,14 @@
 %section{class: "container font-messiri mx-auto px-4 space-y-6 bg-stone-100 my-8"}
-  .max-w-screen-xl.px-4.py-8.mx-auto.lg:py-8.lg:px-6
-    .max-w-screen-md.mx-auto.mb-8.text-center.lg:mb-12
-      %h2.mb-4.text-3xl.font-extrabold.tracking-tight.text-gray-900.dark:text-white
-        Designed for business
-        teams like yours
-      %p.mb-5.font-light.text-gray-500.sm:text-xl.dark:text-gray-400
-        Here at Landwind we focus on markets
-        where technology, innovation, and capital can unlock long-term value and drive economic growth.
+  %div{class: "max-w-screen-xl px-4 py-8 mx-auto lg:py-8 lg:px-6"}
+    %div{class: "max-w-5xl mx-auto mb-8 text-center lg:mb-12"}
+      %h2{class: "text-3xl font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
+        Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
+      %h2{class: "text-3xl font-messiri text-center font-bold tracking-tight font-medium text-red-500"}
+        Високий професіоналізм та великий рівень якості наданих послуг.
+
+      %p.mb-5.font-light.text-stone-500.sm:text-xl
+        Більше 15 років досвіду роботи. Понад 5000 задоволених клієнтів.
+        Високий професіоналізм та великий рівень якості наданих послуг.
     .space-y-8.lg:grid.lg:grid-cols-3.sm:gap-6.xl:gap-10.lg:space-y-0
       .flex.flex-col.max-w-lg.p-6.mx-auto.text-center.text-gray-900.bg-white.border.border-gray-100.rounded-lg.shadow.dark:border-gray-600.xl:p-8.dark:bg-gray-800.dark:text-white
         %h3.mb-4.text-2xl.font-semibold Starter
