--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,21 +3,24 @@
 
 %div{class: "", id: ""}
   
-  %div{class: "wow animate__animated animate__fadeInLeft", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "hero-section"}
+  %div{class: "wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "hero-section"}
     = render "1_hero_section"
   
-  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "services"}
+  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "services"}
     = render "2_services"
     = render "3_services"
   
-  %div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "prices"}
+  %div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "prices"}
     = render "4_prices"
 
-  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "about"}
+  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "about"}
     = render "5_about"
 
-  -#%div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "reviews"}
+  -#%div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "reviews"}
   -#  = render "6_reviews"
 
-  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "3s", "data-wow-delay": ".5s", id: "contacts"}
-    = render "7_contacts"
+  %div{class: "mt-8 wow animate__animated animate__fadeInLeft", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "faq"}
+    = render "7_faq"
+  
+  %div{class: "mt-8 wow animate__animated animate__fadeInRight", "data-wow-duration": "2s", "data-wow-delay": ".5s", id: "contacts"}
+    = render "8_contacts"
