--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,20 +1,22 @@
-%h1{class: "mt-4 font-messiri text-center text-2xl tracking-tight sm:text-3xl font-medium uppercase text-red-600"}
-  Раді вам запропонувати наші послуги
-.mx-auto.p-5.sm:p-10.md:p-16
-  .grid.grid-cols-1.md:grid-cols-3.sm:grid-cols-2.xl:grid-cols-4.gap-10
+%section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
+  %div{class: "text-center"}
+    %h1{class: "text-3xl text-red-500 sm:text-4xl leading-normal font-extrabold tracking-tight"}
+      Раді вам запропонувати наші послуги
+%div{class: "mx-auto p-5 sm:p-10 md:p-16"}
+  %div{class: "grid grid-cols-1 md:grid-cols-3 sm:grid-cols-2 xl:grid-cols-4 gap-10"}
     - @services.each do |service|
-      %a{class: "shadow-md hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
-        .border-r.border-b.border-l.border-gray-400.lg:border-t.lg:border-gray-400.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.flex.flex-col.justify-between.leading-normal
+      %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
+        %div{class: "row"}
           - if service.image.attached?
-            = image_tag(service.image, class: "w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
           - else
-            = image_tag("favicon.png", class: "w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
-          %div{class: "p-4 pt-2 h-auto md:h-64 lg:h-64 xl:h-56"}
-            .mb-8
-              %p.text-gray-900.font-bold.text-lg.mb-2.hover:text-indigo-600.inline-block
+            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+          %div{class: "p-4 pt-2 h-auto md:h-70 lg:h-64 xl:h-56"}
+            %div{class: "mb-8"}
+              %p.text-gray-900.font-bold.text-lg.mb-2.hover:text-red-500.inline-block
                 = service.title
               %p.text-gray-700.text-sm.text-ellipsis
                 = service.description
-          %div{class: "pe-2 pb-2 text-red-600 w-full flex justify-end items-end"}
+          %div{class: "pe-2 pb-2 text-red-500 w-full flex justify-end items-end"}
             %div{class: "pe-2 sm:pe-4 w-full sm:w-2/3 border-t-2 border-red-300 text-end"}
               Докладніше
