--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,8 +1,11 @@
 %div{class: "container mx-auto my-4 font-messiri"}
   %div{class: "flex flex-wrap justify-between"}
-    .w-full.px-4{class: "lg:w-8/12"}
-      %sectionmx-auto.p-5.sm:p-10.md:p-16.relative.font-messiri
-        .bg-cover.bg-center.text-center.overflow-hidden{:style => "min-height: 450px; background-image: url('#{url_for(@service.image)}')", title: @service.title}
+    %div{class: "w-full.px-4 lg:w-8/12"}
+      %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
+        - if @service.image.present?
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@service.image)}')", title: @service.title}
+        - else
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @service.title}
         .max-w-3xl.mx-auto.mb-8
           .mt-3.bg-white.rounded-b.lg:rounded-b-none.lg:rounded-r.flex.flex-col.justify-between.leading-normal
             .bg-white.relative.top-0.-mt-32.p-5.sm:p-10
